--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,23 @@
 server:
   port: 8085
-#  servlet:
-#    context-path: /config-server
-
-  
 spring:
   cloud:
     config:
       server:
         git:
-          uri: https://github.com/praveen1664/Microservices-Configuration
+          uri: https://github.com/praveen1664/Microservices-Configuration.git
           clone-on-start: true
   application:
     name: CONFIG-SERVER
 
-
-
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    registry-fetch-interval-seconds: 30
+#    refresh:
+#      enable: true
+#    service-url:
+#      defaultZone:  https://serviceregitsry-production.up.railway.app/eureka
