--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,14 +10,14 @@ spring:
   application:
     name: CONFIG-SERVER
 
-#eureka:
-#  instance:
-#    prefer-ip-address: true
-#  client:
-#    register-with-eureka: true
-#    fetch-registry: true
-#    registry-fetch-interval-seconds: 30
-#    refresh:
-#      enable: true
-#    service-url:
-#      defaultZone:  https://serviceregitsry-production.up.railway.app/eureka
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    registry-fetch-interval-seconds: 30
+    refresh:
+      enable: true
+    service-url:
+      defaultZone:  https://serviceregitsry-production.up.railway.app/eureka
