--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
   port: 8085
-spring:
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/praveen1664/Microservices-Configuration.git
-          clone-on-start: true
+# spring:
+#   cloud:
+#     config:
+#       server:
+#         git:
+#           uri: https://github.com/praveen1664/Microservices-Configuration.git
+#           clone-on-start: true
   application:
     name: CONFIG-SERVER
 
